[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SubReDo"
version = "1.0.0"
description = "Apply Cuts from VideoReDo Project Files to Subtitles."
authors = ["rlaphoenix <rlaphoenix@pm.me>"]
readme = "README.md"
repository = "https://github.com/rlaphoenix/SubReDo"
keywords = ["python", "subtitles", "cut", "editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rlaphoenix/SubReDo/issues"
"Forums" = "https://github.com/rlaphoenix/SubReDo/discussions"
"Changelog" = "https://github.com/rlaphoenix/SubReDo/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
click = "^8.1.3"
rich = "^13.3.4"
pymediainfo = "^6.0.1"

[tool.poetry.scripts]
subredo = "subredo.main:main"
